final version completed

--- a/index.html
+++ b/index.html
@@ -6,11 +6,44 @@
   </head>
   <link href="resources\style.css" type="text/css" rel="stylesheet">
   <body>
-    <h1>Broadway Design</h1>
-    <h6>Home</h6>
-    <h6>About</h6>
-    <h6>Work</h6>
-    <h6>Team</h6>
-    <h6>Contact</h6>
+    <span id="body1">
+    <div id="bgimg">
+      <h1 id="head">Broadway Design</h1>
+      <h6>Home</h6>
+      <h6>About</h6>
+      <h6>Work</h6>
+      <h6>Team</h6>
+      <h6>Contact</h6>
+    </div>
+    <div>
+      <h2 id="head2">Our Process</h2>
+      <img src="resources/images/identify.svg">
+      <h3 >Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="resources\images\understand.svg">
+      <h3 >Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="resources\images\execute.svg">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+    <h5 id="bgimg">
+      Designed in New York
+    </h5>
+    <div>
+      <h3>Portfolio</h3>
+      <p> Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring</p>
+      <h3>Contacts</h3>
+    </div>
+    <div id="contact">
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+    </span>
+    <div id="botrght">
+      <p>© 2017 <u>Home</u> <u>About</u> <u>Work</u> <u>Team</u> <u>Contact</u></p>
   </body>
 </html>
